fix boxes from overflowing when resizing

--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,15 @@ body{
     display:flex;
     justify-content: space-around;
     align-items: center;
+    height:500px;
 }
 
 .inspector{
     display:flex;
     flex-direction: column;
     justify-content: space-around;
-    width:220px;
-    height:295px;
+    height:55%;
+    width:15%;
     border-radius:10px;
     padding:16px;
     text-align: center;
@@ -63,22 +64,9 @@ body{
     background-color: whitesmoke;
     display:flex;
     flex-flow:wrap;
-    width:500.3px;
-    height:500px;
+    width:30%;
+    height:85%;
     cursor:crosshair;
-}
-
-.footer{
-    display:flex;
-    font-size: x-large;
-    background-color:#B2A59B;
-    position:fixed;
-    left:0;
-    bottom:0;
-    width:100%;
-    height:5%;
-    justify-content: center;
-    align-items: center;
 }
 
 .line-break{
